# dailytools

./: .gitignore  CODEX_DEV_PLAN_DevEnvManager.md  DevEnvManager.spec  README.md  build_exe.bat  main.py  requirements.txt  update-manifest.json
.github/workflows/: ci.yml
app/: __init__.py  ui_components.py  ui_env_manager.py  ui_main.py  ui_observability.py  ui_port_manager.py
core/: __init__.py  app_paths.py  config_store.py  doctor.py  downloader.py  env_var.py  event_log.py  extractor.py  http_client.py  process_runner.py  runtime_discovery.py  task_bus.py
docs/: design.md  issues-49-56.md  python-repair.md  release-checklist.md  release-v1.1.0.md  release-v1.3.0.md  release-v1.5.1.md  release-v1.5.2.md  release-v1.5.3.md  storage-cleanup-architecture.md  test-report.md  third-party-dependencies.md  troubleshooting.md  user-guide.md
docs/software-copyright/: 01_软件基本信息.md  02_功能说明书.md  03_设计说明书.md  04_用户操作手册.md  05_测试报告.md  06_版本说明.md  07_第三方依赖说明.md  08_源代码整理说明.md
managers/: __init__.py  base_manager.py  jdk_manager.py  node_manager.py  python_manager.py
observability/: __init__.py  health.py  metrics.py  runtime_state.py
port/: __init__.py  port_models.py  port_scanner.py  process_control.py
scripts/: check_repo_hygiene.py
tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
tauri/src/: main.ts  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: diagnostics.rs  lib.rs  main.rs  mysql_repair.rs
tauri/src-tauri/src/cleanup/: app_usage.rs  architecture.rs  clean_plan.rs  clean_report.rs  desktop.rs  dev_cache.rs  disk.rs  downloads.rs  duplicates.rs  game_usage.rs  large_files.rs  mod.rs  model.rs  protect.rs  report.rs  safe_clean.rs  scan.rs  software.rs  utils.rs
tests/: __init__.py  test_doctor.py  test_extractor.py  test_path_merge.py  test_port_filter.py  test_process_control.py
(+5 files in other folders)
