[package]
name = "dailytools-tauri"
version = "0.1.0"
description = "A lightweight Tauri rewrite of DevEnv Manager."
authors = ["weidonglang"]
edition = "2021"

[lib]
name = "dailytools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
tauri = { version = "2.11.3", features = [] }
sysinfo = "0.39.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
